tests/baselines/reference/parserComputedPropertyName34.errors.txt
parserComputedPropertyName34.ts(3,5): error TS1164: Computed property names are not allowed in enums.
parserComputedPropertyName34.ts(3,11): error TS2304: Cannot find name 'id'.
parserComputedPropertyName34.ts(4,5): error TS1164: Computed property names are not allowed in enums.


==== parserComputedPropertyName34.ts (3 errors) ====
    enum E {
        // no ASI, comma expected
        [e] = id++,
        ~~~
!!! error TS1164: Computed property names are not allowed in enums.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2] = 1
        ~~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }